--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,10 +1,33 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
 img {
   width: 100px;
   height: 100px;
+}
+
+.container-I {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.container-II {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container-III {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 200px;
 }
 
 .title {
