--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  display: flex;
+}
+
+.icon-container {
+  height: 100%;
+  wdith: 50px;
+  padding-right: 15px;
 }
 
 .icon {
@@ -35,6 +43,17 @@ body {
   justify-content: center;
 }
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -48,6 +67,10 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.text {
+  margin-bottom: 15px;
 }
 
 button {
